--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,94 +1,25 @@
+<form action="/filterRequest" method="POST">
+    <label>costea geniu<input type="radio" name="radioOption" value="radioOption1"></label>
+    <label>costea daun</label><input type="radio" name="radioOption" value="radioOption2"></label>
+    <input type="submit" value="apasa">
+</form>
+
+{{# each products }}
 <div class="row">
+    {{# each this }}
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="https://upload.wikimedia.org/wikipedia/en/5/5e/Gothiccover.png" alt="..." class="img-responsive">
+            <img src="/uploads/{{this.imagePath}}" alt="">
             <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur debitis
-                    delectus deserunt dolore dolorem eum expedita, inventore nobis omnis perferendis possimus quas
-                    repellat soluta, sunt voluptate, voluptates! Assumenda, nulla?</p>
+                <h3>{{ this.title }}</h3>
+                <p class="description">{{ this.description }}</p>
                 <div class="clearfix">
-                    <div class="price pull-left">$12</div>
-                    <a href="#" class="btn btn-success pull-right" role="button">Button</a>
+                    <div class="price pull-left">{{ this.price }}</div>
+                    <a href="#" class="btn btn-success pull-right" role="button">Add to shopping cart</a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="https://upload.wikimedia.org/wikipedia/en/5/5e/Gothiccover.png" alt="..." class="img-responsive">
-            <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur debitis
-                    delectus deserunt dolore dolorem eum expedita, inventore nobis omnis perferendis possimus quas
-                    repellat soluta, sunt voluptate, voluptates! Assumenda, nulla?</p>
-                <div class="clearfix">
-                    <div class="price pull-left">$12</div>
-                    <a href="#" class="btn btn-success pull-right" role="button">Button</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="https://upload.wikimedia.org/wikipedia/en/5/5e/Gothiccover.png" alt="..." class="img-responsive">
-            <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur debitis
-                    delectus deserunt dolore dolorem eum expedita, inventore nobis omnis perferendis possimus quas
-                    repellat soluta, sunt voluptate, voluptates! Assumenda, nulla?</p>
-                <div class="clearfix">
-                    <div class="price pull-left">$12</div>
-                    <a href="#" class="btn btn-success pull-right" role="button">Button</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    {{/each}}
 </div>
-<div class="row">
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="https://upload.wikimedia.org/wikipedia/en/5/5e/Gothiccover.png" alt="..." class="img-responsive">
-            <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur debitis
-                    delectus deserunt dolore dolorem eum expedita, inventore nobis omnis perferendis possimus quas
-                    repellat soluta, sunt voluptate, voluptates! Assumenda, nulla?</p>
-                <div class="clearfix">
-                    <div class="price pull-left">$12</div>
-                    <a href="#" class="btn btn-success pull-right" role="button">Button</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="https://upload.wikimedia.org/wikipedia/en/5/5e/Gothiccover.png" alt="..." class="img-responsive">
-            <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur debitis
-                    delectus deserunt dolore dolorem eum expedita, inventore nobis omnis perferendis possimus quas
-                    repellat soluta, sunt voluptate, voluptates! Assumenda, nulla?</p>
-                <div class="clearfix">
-                    <div class="price pull-left">$12</div>
-                    <a href="#" class="btn btn-success pull-right" role="button">Button</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="https://upload.wikimedia.org/wikipedia/en/5/5e/Gothiccover.png" alt="..." class="img-responsive">
-            <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur debitis
-                    delectus deserunt dolore dolorem eum expedita, inventore nobis omnis perferendis possimus quas
-                    repellat soluta, sunt voluptate, voluptates! Assumenda, nulla?</p>
-                <div class="clearfix">
-                    <div class="price pull-left">$12</div>
-                    <a href="#" class="btn btn-success pull-right" role="button">Button</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+{{/each}}
