--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -16,7 +16,7 @@
                     <p class="description">{{ this.description }}</p>
                     <div class="clearfix">
                         <div class="price pull-left">{{ this.price }}</div>
-                        <a href="#" class="btn btn-success pull-right" role="button">Add to shopping cart</a>
+                        <a class="btn btn-success pull-right" role="button">Add to shopping cart</a>
                     </div>
                 </div>
             </div>
