--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -41,6 +41,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="signin-form profile">
                 <h3>Login</h3>
 
+                <div class="alert alert-danger">{{message}}</div>
+
                 <div class="login-form">
                     <form action="/authpost" method="post">
                         <input type="text" name="logemail" placeholder="E-mail" required="">
