--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -3,7 +3,7 @@
     <label>costea daun</label><input type="radio" name="radioOption" value="radioOption2"></label>
     <input type="submit" value="apasa">
 </form>
-<form action="/createpage">
+{{!-- <form action="/createpage">
     {{# each products }}
     <div class="row">
         {{# each this }}
@@ -24,4 +24,4 @@
         {{/each}}
     </div>
     {{/each}}
-</form>
+</form> --}}
