--- a/views/shop/product_template_overview.hbs
+++ b/views/shop/product_template_overview.hbs
@@ -8,3 +8,4 @@
 <p class="product__description">
     {{ products.description }}
 </p>
+<a href="/add-to-cart/{{products._id}}" class="btn btn-success pull-right" role="button">add to cart</a>
