--- a/views/products.ejs
+++ b/views/products.ejs
@@ -8,6 +8,41 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-Wexample-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Brand</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/shopping-cart/">
+                            <i class="fa fa-shopping-cart" aria-hidden="true"></i> Shopping Cart
+                            <span class="badge"><%= session.cart.totalQuantity %></span>
+                        </a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                            aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> User Management <span
+                                class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">User Account</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Logout</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
     <form action="/filterRequest" method="POST">
         <label>costea geniu<input type="radio" name="radioOption" value="radioOption1"></label>
         <label>costea daun</label><input type="radio" name="radioOption" value="radioOption2"></label>
@@ -26,7 +61,7 @@
                     </div>
                     <div class="clearfix">
                         <a class="btn btn-success pull-right" role="button"
-                            href="/product?id=<%= products[i]._id %>">Add to shopping cart</a>
+                            href="/product-review?id=<%= products[i]._id %>">Add to shopping cart</a>
                     </div>
                 </div>
             </div>
