--- a/views/products.ejs
+++ b/views/products.ejs
@@ -27,7 +27,11 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/shopping-cart/">
                             <i class="fa fa-shopping-cart" aria-hidden="true"></i> Shopping Cart
+                            <% if(!session.cart){ %>
+                            <span class="badge">0</span>
+                            <% } else { %>
                             <span class="badge"><%= session.cart.totalQuantity %></span>
+                            <% } %>
                         </a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
