--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -149,6 +149,11 @@
         position: relative;
         top: -4px;
     }
+
+    .dropdown>span {
+        position: relative;
+        top: -6px;
+    }
 </style>
 <div class="not-available-error">
     <i class="fas fa-exclamation-triangle"></i>
@@ -199,8 +204,8 @@
                     <div class="dropdown">
                         <span>RO</span>
                         <div class="dropdown-content">
-                            <p><a href="index.html">RO</a></p>
-                            <p><a href="indexrus.html">RU</a></p>
+                            <p><a href="/">RO</a></p>
+                            <p><a href="#">RU</a></p>
                         </div>
                     </div>
                 </div>
@@ -306,10 +311,10 @@
                 </div>
                 <div>
                     <ul class="nav-list2">
-                        <li><a href="index.html">Acasa</a></li>
-                        <li><a href="oglinzi.html">Oglinzi</a></li>
-                        <li><a href="index.html#despre">Despre noi</a></li>
-                        <li><a href="contacte.html">Contacte</a></li>
+                        <li><a href="/">Acasa</a></li>
+                        <li><a href="/products/1">Oglinzi</a></li>
+                        <li><a href="/#despre">Despre noi</a></li>
+                        <li><a href="/contacts">Contacte</a></li>
                     </ul>
                 </div>
                 <div class="third-column">
