--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -99,6 +99,10 @@
     .produse-populare :nth-child(4) {
         display: none;
     }
+
+    .nav-list {
+        margin-left: -69px;
+    }
 </style>
 
 <title>Oglinzi.biz</title>
